--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -3011,17 +3011,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3049,8 +3049,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -3195,17 +3195,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3233,8 +3233,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -3247,17 +3247,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3285,8 +3285,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -3317,17 +3317,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3355,8 +3355,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -3510,17 +3510,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3552,8 +3552,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status",
         "result"
       ]
@@ -3609,17 +3609,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3651,8 +3651,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -3823,17 +3823,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3861,8 +3861,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -4041,17 +4041,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -4079,8 +4079,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -4206,17 +4206,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -4244,8 +4244,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -4353,17 +4353,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -4391,8 +4391,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -4451,22 +4451,22 @@
       "type": "object",
       "description": "Represents the metadata of a project.",
       "properties": {
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project creation datetime."
         },
-        "lastModifiedOn": {
+        "lastModifiedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project creation datetime."
         },
-        "lastTrainedOn": {
+        "lastTrainedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project last trained datetime."
         },
-        "lastDeployedOn": {
+        "lastDeployedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project last deployed datetime."
@@ -4530,8 +4530,8 @@
         }
       },
       "required": [
-        "createdOn",
-        "lastModifiedOn",
+        "createdDateTime",
+        "lastModifiedDateTime",
         "projectKind",
         "projectName",
         "language"
@@ -4678,17 +4678,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -4716,8 +4716,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -4830,17 +4830,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -4872,8 +4872,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status",
         "result"
       ]
