--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -1966,17 +1966,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -2004,8 +2004,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -2173,17 +2173,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -2215,8 +2215,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -2511,17 +2511,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -2549,8 +2549,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -2676,17 +2676,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -2714,8 +2714,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -2823,17 +2823,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -2861,8 +2861,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -2912,22 +2912,22 @@
       "type": "object",
       "description": "Represents the metadata of a project.",
       "properties": {
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project creation datetime."
         },
-        "lastModifiedOn": {
+        "lastModifiedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project creation datetime."
         },
-        "lastTrainedOn": {
+        "lastTrainedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project last trained datetime."
         },
-        "lastDeployedOn": {
+        "lastDeployedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the project last deployed datetime."
@@ -2983,8 +2983,8 @@
         }
       },
       "required": [
-        "createdOn",
-        "lastModifiedOn",
+        "createdDateTime",
+        "lastModifiedDateTime",
         "projectKind",
         "projectName",
         "language"
@@ -3108,17 +3108,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3146,8 +3146,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status"
       ]
     },
@@ -3260,17 +3260,17 @@
           "description": "The job ID.",
           "readOnly": true
         },
-        "createdOn": {
+        "createdDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The creation date time of the job."
         },
-        "lastUpdatedOn": {
+        "lastUpdatedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last date time the job was updated."
         },
-        "expiresOn": {
+        "expirationDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The expiration date time of the job."
@@ -3302,8 +3302,8 @@
       },
       "required": [
         "jobId",
-        "createdOn",
-        "lastUpdatedOn",
+        "createdDateTime",
+        "lastUpdatedDateTime",
         "status",
         "result"
       ]
