--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -170,7 +170,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The request body",
             "required": true,
@@ -484,7 +484,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The training input parameters.",
             "required": true,
@@ -654,7 +654,7 @@
             "type": "string"
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The new deployment info.",
             "required": true,
@@ -824,7 +824,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The job object to swap two deployments.",
             "required": true,
