--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -170,7 +170,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The request body",
             "required": true,
@@ -328,7 +328,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The copy project info.",
             "required": true,
@@ -594,7 +594,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The training input parameters.",
             "required": true,
@@ -815,7 +815,7 @@
             "type": "string"
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The new deployment info.",
             "required": true,
@@ -934,7 +934,7 @@
             "type": "string"
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The options for deleting the deployment.",
             "required": true,
@@ -1108,7 +1108,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The job object to swap two deployments.",
             "required": true,
@@ -1379,7 +1379,7 @@
             "type": "string"
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The exported model info.",
             "required": true,
@@ -1759,7 +1759,7 @@
             "type": "string"
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The training input parameters.",
             "required": true,
@@ -2162,7 +2162,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The new project resources info.",
             "required": true,
@@ -2220,7 +2220,7 @@
             "maxLength": 100
           },
           {
-            "name": "details",
+            "name": "body",
             "in": "body",
             "description": "The info for the deployment resources to be deleted.",
             "required": true,
