--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -426,7 +426,7 @@
             "x-ms-client-name": "ExportedProjectFormat"
           },
           {
-            "name": "exportedProject",
+            "name": "body",
             "in": "body",
             "description": "The project data to import.",
             "required": true,
@@ -2879,12 +2879,12 @@
           "type": "string",
           "description": "Represents deployment modelId."
         },
-        "lastTrainedOn": {
+        "lastTrainedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents deployment last trained time."
         },
-        "lastDeployedOn": {
+        "lastDeployedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents deployment last deployed time."
@@ -2902,8 +2902,8 @@
       "required": [
         "deploymentName",
         "modelId",
-        "lastTrainedOn",
-        "lastDeployedOn",
+        "lastTrainedDateTime",
+        "lastDeployedDateTime",
         "deploymentExpirationDate",
         "modelTrainingConfigVersion"
       ]
