--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -4256,12 +4256,12 @@
           "format": "int32",
           "description": "Represents progress percentage."
         },
-        "startedOn": {
+        "startDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the start date time."
         },
-        "endedOn": {
+        "endDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the end date time."
@@ -4435,7 +4435,7 @@
           "$ref": "#/definitions/AnalyzeConversationAuthoringSubTrainingJobState",
           "description": "Represents model evaluation status."
         },
-        "estimatedEndOn": {
+        "estimatedEndDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the estimated end date time for training and evaluation."
