--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -3060,12 +3060,12 @@
           "format": "int32",
           "description": "Represents progress percentage."
         },
-        "startedOn": {
+        "startDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the start date time."
         },
-        "endedOn": {
+        "endDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the end date time."
@@ -3239,7 +3239,7 @@
           "$ref": "#/definitions/AnalyzeConversationAuthoringSubTrainingJobState",
           "description": "Represents model evaluation status."
         },
-        "estimatedEndOn": {
+        "estimatedEndDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents the estimated end date time for training and evaluation."
